Added button for new game

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <main>
         <section id="section1">
+            <div class="btn-container"><button class="btn-new">New Game</button></div>
             <h2>ScoreCard</h2>
             <div class="scorecard-container">
                 
